tests/src/frontend/visibility/invalid/with_visibility_2.sk
class Foo private (x: void)

fun test(f: Foo): void {
  f.x;
  _ = f with {x => void}
}
